--- a/views/splash.haml
+++ b/views/splash.haml
@@ -6,7 +6,7 @@
     %h2 seattle, wa
 
     %p
-      Site coming soon, CPUs are maxed at 100%, disk I/O is fully saturated.
+      CPUs are maxed at 100%, disk I/O is fully saturated.
 
     %p
       <em>Cycles Per Instruction</em> is out on April 18th on cassette tape + digital.
