--- a/views/splash.haml
+++ b/views/splash.haml
@@ -9,8 +9,9 @@
       CPUs are maxed at 100%, disk I/O is fully saturated.
 
     %p
-      <em>Cycles Per Instruction</em> is out on April 18th on cassette tape + digital.
-      %a{:href => "http://netcat.bandcamp.com", :target => '_blank'} Pre-order here.
+      <em>Cycles Per Instruction</em> is now out on cassette tape + digital.
+      %a{:href => "http://netcat.bandcamp.com", :target => '_blank'}
+        Listen and order here!
 
     %h3 Links
     %ul
@@ -19,11 +20,11 @@
       %li
         %a{:href => "http://soundcloud.com/usrbinnc", :target => '_blank'} Soundcloud (live recordings)
       %li
-        %a{:href => "http://github.com/usrbinnc", :target => '_blank'} GitHub
+        %a{:href => "http://github.com/usrbinnc", :target => '_blank'} GitHub (browse our code)
       %li
-        %a{:href => "http://www.tableandchairsmusic.com", :target => '_blank'} Table &amp; Chairs
+        %a{:href => "http://www.tableandchairsmusic.com", :target => '_blank'} Table &amp; Chairs (our record label)
       %li
-        %a{:href => "https://www.dropbox.com/s/nssnui98g9t08yg/01_netcat_Press_3000x2000.jpg", :target => '_blank'} High-res press photo
+        %a{:href => "https://www.dropbox.com/s/nssnui98g9t08yg/01_netcat_Press_3000x2000.jpg", :target => '_blank'} High-res press photo (nerds)
       %li
         E-mail us: 
         %a{:href => "mailto:root@netcat.com"} root@netcat.com
