--- a/views/splash.haml
+++ b/views/splash.haml
@@ -9,6 +9,9 @@
       CPUs are maxed at 100%, disk I/O is fully saturated.
 
     %p
+      netcat is David Balatero (cello/computers), Brandon Lucia (<a href="/chango">chango</a>/drums/computers), and Andrew Olmstead (synths).
+
+    %p
       <em>Cycles Per Instruction</em> is now out on cassette tape + digital.
       %a{:href => "http://netcat.bandcamp.com", :target => '_blank'}
         Listen and order here!
