--- a/views/splash.haml
+++ b/views/splash.haml
@@ -9,7 +9,7 @@
       CPUs are maxed at 100%, disk I/O is fully saturated.
 
     %p
-      netcat is David Balatero (cello/computers), Brandon Lucia (<a href="/chango">chango</a>/drums/computers), and Andrew Olmstead (synths).
+      netcat is David Balatero (cello/computers), Brandon Lucia (<a href="/chango">chango</a>/drums/computers), and Andrew Olmstead (synths/computers).
 
     %p
       <em>Cycles Per Instruction</em> is now out on cassette tape + digital.
