Fix contact email address
I assume you didn't work out a deal with Fyodor for root@netcat.com.

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -30,7 +30,7 @@
         %a{:href => "https://www.dropbox.com/s/nssnui98g9t08yg/01_netcat_Press_3000x2000.jpg", :target => '_blank'} High-res press photo (nerds)
       %li
         E-mail us: 
-        %a{:href => "mailto:root@netcat.com"} root@netcat.com
+        %a{:href => "mailto:root@netcat.co"} root@netcat.co
 
     %pre
       :preserve
