link personal sites

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -9,7 +9,9 @@
       CPUs are maxed at 100%, disk I/O is fully saturated.
 
     %p
-      netcat is David Balatero (cello/computers), Brandon Lucia (<a href="/chango">chango</a>/drums/computers), and Andrew Olmstead (synths/computers).
+      netcat is <a href="http://www.davidbalatero.com" target="_blank">David Balatero</a> (cello/computers),
+      <a href="http://brandonlucia.com" target="_blank">Brandon Lucia</a> 
+      (<a href="/chango">chango</a>/drums/computers), and Andrew Olmstead (synths/computers).
 
     %p
       <em>Cycles Per Instruction</em> is now out on cassette tape + digital.
