--- a/views/splash.haml
+++ b/views/splash.haml
@@ -11,6 +11,9 @@
   %a{:href => "http://netcat.bandcamp.com", :target => '_blank'}
     Listen and order here!
 
+%p
+  %a{:href => '/press'} Read some press about us.
+
 %h3 Links
 %ul
   %li
