--- a/views/press.haml
+++ b/views/press.haml
@@ -45,6 +45,27 @@
 
 .quote
   %img{:src => '/images/flags/us.png'}
+  %a{:href => 'http://raisedbygypsies.blogspot.com/2014/05/cassette-review-netcat-cycles-per.html', :target => '_blank'} CASSETTE REVIEW: netcat “Cycles Per Instruction”
+  (raisedbygypsies.blogspot.com)
+
+  %blockquote
+    %p
+      This begins to bring out more of the computer vibe that I was expecting, and if you want to call this something to do with computers (somehow mix “computer” or “technology” with “ambience”) then that could work, but yes, this is genre defying.
+
+    .sig
+      &mdash; Joshua Macala, Raised by Gypsies
+
+.quote
+  %img{:src => '/images/flags/de.png'}
+  %a{:href => 'http://tuximail.de/podcast/shownotes12.html', :target => '_blank'} Shownotes zu Was passiert da draußen? Folge 12 vom 13.
+  (tuximail.de)
+
+  %blockquote
+    %p
+      Sebi was nice enough to interview us for his German Linux/music podcast. Thanks, Sebi!
+
+.quote
+  %img{:src => '/images/flags/us.png'}
   %a{:href => "http://www.rs-online.com/designspark/electronics/eng/blog/media-formats-no-numbers-and-netcat", :target => '_blank'} Media Formats, No Numbers and Netcat
   (rs-online.com)
 
