--- a/views/press.haml
+++ b/views/press.haml
@@ -24,6 +24,18 @@
   recently!
 
 .quote
+  %img{:src => '/images/flags/us.png'}
+  %a{:href => 'http://www.soundctrl.com/organic-complexity-netcats-cycles-per-instruction', :target => '_blank'} The Organic, Computerized Complexity of netcat’s “Cycles Per Instruction”
+  (soundctrl.com)
+
+  %blockquote
+    %p
+      There are multiple philosophies and concepts woven together in Cycles Per Instruction: improvisation, computerization, democracy of software, building and breaking technological barriers between artist, art, and audience. But through the mystified intricacy of computer programming, netcat creates a really solid, beautiful piece of music.
+
+    .sig
+      &mdash; Brian Parker, SoundCtrl
+
+.quote
   On Twitter
 
   %blockquote
